# Contracts

./: .gitignore  BENEFICIARY_REASSIGNMENT_SOCIAL_RECOVERY.md  CERTIFICATE_REGISTRY.md  COLLATERAL_BRIDGE.md  Cargo.toml  DISASTER_RECOVERY.md  DIVERSIFIED_VESTING_IMPLEMENTATION.md  GOVERNANCE_VETO_IMPLEMENTATION.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INVARIANTS.md  ISSUE_269_IMPLEMENTATION_SUMMARY.md  LEGAL_SAFT_DOCUMENT_HASH_ANCHORING.md  LOCKUP_IMPLEMENTATION.md  LST_AUTO_COMPOUNDING_IMPLEMENTATION.md  ON-CHAIN_PROPOSAL_FOR_VESTING_PAUSE.md  PERFORMANCE_CLIFF_IMPLEMENTATION.md  PR_DESCRIPTION.md  PULL_REQUEST_TEMPLATE.md  README.md  REGULATED_ASSET_SEP08_COMPATIBILITY.md  SECURITY.md  ZK_ACCREDITED_INVESTOR_VERIFICATION.md  ZK_PRIVACY_CLAIMS_IMPLEMENTATION.md  build_errors.txt  build_errors_local.txt  invoke_matches.txt  rust-toolchain.toml  test_output.txt
.github/workflows/: test.yml
analytics/: .env.example  Cargo.toml  README.md
analytics/db/: schema.sql
analytics/src/: main.rs  predictor.rs
contracts/: 278-Fraudulent-Grant-Clawback.md  291-Virtual-Accumulator.md  292-Anti-Reentry-Guard.md  299-Authorized-Lessor-Registry.md  CLAIM_AND_SWAP_IMPLEMENTATION.md  COMPLIANCE_ERROR_MAPPING.md  COMPLIANCE_STANDARDIZATION_SUMMARY.md  FRONTEND_INTEGRATION_GUIDE.md  compliance_error_examples.md  compliance_test.md  hardhat.config.js  package-lock.json  package.json  storage_optimization.rs  vesting_struct_optimization.rs
contracts/cache/: solidity-files-cache.json
contracts/collateral_bridge/: Cargo.toml
contracts/collateral_bridge/src/: lib.rs  test.rs
contracts/deposit_to_yield_adapter/: Cargo.toml  DEPLOYMENT_GUIDE.md  README.md
contracts/deposit_to_yield_adapter/examples/: integration_example.rs
contracts/deposit_to_yield_adapter/src/: lib.rs  test.rs
contracts/earn-quest/src/: errors.rs  events.rs  fraud_arbitration.rs  lessor_registry.rs  lib.rs  storage.rs  vesting.rs
contracts/earn-quest/tests/: fraud_arbitration_tests.rs  (+3 more)
contracts/interfaces/: IRevenueOracle.sol  ISanctionsOracle.sol  IVestingVault.sol
contracts/lending_contract/: Cargo.toml
contracts/lockup_token/: Cargo.toml
contracts/staking_contract/: Cargo.toml
contracts/vesting_contracts/: BATCH_CLAIM_FEATURE.md  Cargo.toml
contracts/vesting_nft_wrapper/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
contracts/vesting_status_nft/: Cargo.toml
contracts/vesting_status_nft/src/: lib.rs  test.rs
contracts/vesting_status_nft/test_snapshots/test/: test_nft_minting_and_levels.1.json
contracts/vesting_vault/: CROSS_CHAIN_IMPLEMENTATION.md  Cargo.toml  WITHDRAWAL_ADDRESS_WHITELISTING.md
scripts/: backup_database.sh  fire_drill.sh  mainnet-sanity-check.sh  recover_database.sh
social/: .env.example  Cargo.toml  README.md  WEBSOCKET_IMPLEMENTATION.md
social/db/: schema.sql
social/src/: comments.rs  main.rs  messaging.rs  websocket.rs
(+241 files in other folders)
