[package]
name = "analytics-backend"
version = "0.1.0"
edition = "2021"
description = "Revenue prediction and analytics backend for Stellar Protocol"

[dependencies]
# Web framework
actix-web = "4"
actix-rt = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1", features = ["full"] }

# Math & Statistics
statrs = "0.16"  # Statistical distributions
ndarray = "0.15"  # N-dimensional arrays
nalgebra = "0.32"  # Linear algebra

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
dotenvy = "0.15"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography (for data integrity)
sha2 = "0.10"
hex = "0.4"
