[package]
name = "social-backend"
version = "0.1.0"
edition = "2021"
description = "Exclusive comment system and messaging backend for Stellar Protocol"

[dependencies]
# Web framework
actix-web = "4"
actix-rt = "2"
actix-web-actors = "4"
actix = "0.13"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"

# Random number generation
rand = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Authentication & Security
jsonwebtoken = "9"
argon2 = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }

# Encryption (for E2E messaging)
chacha20poly1305 = "0.10"
curve25519-dalek = "4"

# Configuration
dotenvy = "0.15"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Validation
validator = { version = "0.16", features = ["derive"] }
