[package]
name = "vesting_status_nft"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
vesting_contracts = { path = "../vesting_contracts" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
